--- a/html/seniorSchedule.html
+++ b/html/seniorSchedule.html
@@ -1454,13 +1454,13 @@
                                 <table>
                                     <thead>
                                         <tr>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-sun" data-date="2018-07-01">1</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-mon" data-date="2018-07-02">2</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-tue" data-date="2018-07-03">3</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-wed" data-date="2018-07-04">4</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-thu" data-date="2018-07-05">5</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-fri" data-date="2018-07-06">6</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-sat" data-date="2018-07-07">7</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-sun" data-date="2018-07-01">July 1</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-mon" data-date="2018-07-02">2</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-tue" data-date="2018-07-03">3</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-wed" data-date="2018-07-04">4</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-thu" data-date="2018-07-05">5</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-fri" data-date="2018-07-06">6</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-sat" data-date="2018-07-07">7</td>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -1537,13 +1537,13 @@
                                 <table>
                                     <thead>
                                         <tr>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-sun" data-date="2018-07-08">8</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-mon" data-date="2018-07-09">9</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-tue" data-date="2018-07-10">10</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-wed" data-date="2018-07-11">11</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-thu" data-date="2018-07-12">12</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-fri" data-date="2018-07-13">13</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-sat" data-date="2018-07-14">14</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-sun" data-date="2018-07-08">8</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-mon" data-date="2018-07-09">9</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-tue" data-date="2018-07-10">10</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-wed" data-date="2018-07-11">11</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-thu" data-date="2018-07-12">12</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-fri" data-date="2018-07-13">13</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-sat" data-date="2018-07-14">14</td>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -1629,13 +1629,13 @@
                                 <table>
                                     <thead>
                                         <tr>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-sun" data-date="2018-07-08">17</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-mon" data-date="2018-07-09">18</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-tue" data-date="2018-07-10">19</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-wed" data-date="2018-07-11">20</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-thu" data-date="2018-07-12">21</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-fri" data-date="2018-07-13">22</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-sat" data-date="2018-07-14">23</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-sun" data-date="2018-07-08">17</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-mon" data-date="2018-07-09">18</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-tue" data-date="2018-07-10">19</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-wed" data-date="2018-07-11">20</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-thu" data-date="2018-07-12">21</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-fri" data-date="2018-07-13">22</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-sat" data-date="2018-07-14">23</td>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -1784,17 +1784,14 @@
                                                 <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-sun" data-date="2018-07-29">29</td>
                                                 <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-mon" data-date="2018-07-30">30</td>
                                                 <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-tue" data-date="2018-07-31">31</td>
-                                                <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-wed" data-date="2018-08-01">Aug 1</td>
+                                                <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-wed" data-date="2018-08-01">August 1</td>
                                                 <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-thu" data-date="2018-08-02">2</td>
                                                 <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-fri" data-date="2018-08-03">3</td>
                                                 <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-sat" data-date="2018-08-04">4</td>
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            <tr>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
+                                            <tr>                                                
                                                 <td class="fc-event-container">
                                                     <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/VFaFXgKxvyN2" target="_blank" data-original-title="" title="">
                                                         <div class="fc-time mbl">All Day</div>
@@ -1804,33 +1801,12 @@
                                                         </p>
                                                     </a>
                                                 </td>
-                                                <td>
-                                                    <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/VFaFXgKxvyN2" target="_blank" data-original-title="" title="">
-                                                        <div class="fc-time mbl">All Day</div>
-                                                        <span class="fc-title">Ohio American Legion<br />State Tournament</span>
-                                                        <p>
-                                                            <span class="fc-location mts">Beavers Field</span>
-                                                        </p>
-                                                    </a>
-                                                </td>
-                                                <td class="fc-event-container" align="center">
-                                                    <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/VFaFXgKxvyN2" target="_blank" data-original-title="" title="">
-                                                        <div class="fc-time mbl">All Day</div>
-                                                        <span class="fc-title">Ohio American Legion<br />State Tournament</span>
-                                                        <p>
-                                                            <span class="fc-location mts">Beavers Field</span>
-                                                        </p>
-                                                    </a>
-                                                </td>
-                                                <td>
-                                                    <a class="away fc-day-grid-event fc-h-event fc-event fc-start fc-end team_game fc-away fc-other-month" style="min-height: 100px;" href="https://goo.gl/maps/VFaFXgKxvyN2" target="_blank" data-original-title="" title="">
-                                                        <div class="fc-time mbl">All Day</div>
-                                                        <span class="fc-title">Ohio American Legion<br />State Tournament</span>
-                                                        <p>
-                                                            <span class="fc-location mts">Beavers Field</span>
-                                                        </p>
-                                                    </a>
-                                                </td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
                                             </tr>
                                         </tbody>
                                     </table>
