senior added to title

--- a/html/seniorSchedule.html
+++ b/html/seniorSchedule.html
@@ -772,7 +772,7 @@
     <!-- EDM Public Mode (non WTT) -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Post 757 Colts Schedule</title>
+    <title>Post 757 Colts Senior Schedule</title>
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.4.0/fullcalendar.min.css" />
     <link rel="stylesheet" type="text/css" href="../main.css" />
 
@@ -1761,7 +1761,7 @@
                             </div>
                         </div>
                         <!-- Week of 7-22 -->
-                            <div class="fc-row fc-week fc-widget-content">
+                        <div class="fc-row fc-week fc-widget-content">
                                 <div class="fc-bg">
                                     <table>
                                         <tbody>
