--- a/html/seniorSchedule.html
+++ b/html/seniorSchedule.html
@@ -1705,13 +1705,13 @@
                                 <table>
                                     <thead>
                                         <tr>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-sun" data-date="2018-07-22">22</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-mon" data-date="2018-07-23">23</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-tue" data-date="2018-07-24">24</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-wed" data-date="2018-07-25">25</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-thu" data-date="2018-07-26">26</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-fri" data-date="2018-07-27">27</td>
-                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-sat" data-date="2018-07-28">28</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-sun" data-date="2018-07-22">22</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-mon" data-date="2018-07-23">23</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-tue" data-date="2018-07-24">24</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-wed" data-date="2018-07-25">25</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-thu" data-date="2018-07-26">26</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-fri" data-date="2018-07-27">27</td>
+                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-sat" data-date="2018-07-28">28</td>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -1760,7 +1760,7 @@
                                 </table>
                             </div>
                         </div>
-                        <!-- Week of 7-22 -->
+                        <!-- Week of 7-29 -->
                         <div class="fc-row fc-week fc-widget-content">
                                 <div class="fc-bg">
                                     <table>
