--- a/html/seniorSchedule.html
+++ b/html/seniorSchedule.html
@@ -1364,13 +1364,13 @@
                                 <table>
                                     <thead>
                                         <tr>
-                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-sun" data-date="2018-06-24">24</td>
-                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-mon" data-date="2018-06-25">25</td>
-                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-tue" data-date="2018-06-26">26</td>
-                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-wed" data-date="2018-06-27">27</td>
-                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-thu" data-date="2018-06-28">28</td>
-                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-fri" data-date="2018-06-29">29</td>
-                                            <td style="color:#c5a82c; background-color: #000080;" class="fc-day-number fc-sat" data-date="2018-06-30">30</td>
+                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-sun" data-date="2018-06-24">24</td>
+                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-mon" data-date="2018-06-25">25</td>
+                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-tue" data-date="2018-06-26">26</td>
+                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-wed" data-date="2018-06-27">27</td>
+                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-thu" data-date="2018-06-28">28</td>
+                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-fri" data-date="2018-06-29">29</td>
+                                            <td style="color:#000080; background-color: #c5a82c;" class="fc-day-number fc-sat" data-date="2018-06-30">30</td>
                                         </tr>
                                     </thead>
                                     <tbody>
