--- a/html/seniorSchedule.html
+++ b/html/seniorSchedule.html
@@ -781,7 +781,7 @@
     <div class="content-container container-fluid">
         <div class="row-fluid">
             <div id="main-content" class="row-fluid column-container mtm">
-                <h1 class="page-heading">Schedule</h1>
+                <h1 class="page-heading">Senior Schedule</h1>
             </div>
         </div>
         <script type="text/javascript">
