--- a/html/AdenaMasterGcal.html
+++ b/html/AdenaMasterGcal.html
@@ -12,6 +12,6 @@
    </a>
    <br/>
    <br/>
-   <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%2333ccff&amp;src=2hqqlv8sqbptgjf5n694i6gr84%40group.calendar.google.com&amp;color=%235A6986&amp;ctz=America%2FNew_York" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-  </body>
+<iframe src="https://calendar.google.com/calendar/embed?mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%2333ccff&amp;src=2hqqlv8sqbptgjf5n694i6gr84%40group.calendar.google.com&amp;color=%235A6986&amp;ctz=America%2FNew_York" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+     </body>
 </html>
