--- a/html/MichaelDennisPhotographyWhite.html
+++ b/html/MichaelDennisPhotographyWhite.html
@@ -118,16 +118,8 @@
     left: 0%;
 
     border-style:solid;
-    border-color:#ffffff;
+    border-color:#000000;
     border-spacing: 10px 10px;
-  }
-  .containerRightWb {
-    position: relative;
-    text-align: Left;
-    color: white;
-    position: absolute;
-    left: 55%;
-
   }
   .containerRight {
     position: relative;
@@ -136,14 +128,7 @@
     position: absolute;
     left: 60%;
   }
-  .containerLeftNb {
-    position: relative;
-    text-align: center;
-    color: white;
-    position: absolute;
-    left: 0%;
 
-  }
   /* Centered text */
   /*https://www.cssfontstack.com/Helvetica-Neue*/
   .centeredHeader {
@@ -175,14 +160,14 @@
 </style>
 </head>
 
-<body class="em_body" style="margin:0px; padding:0px;" bgcolor="#efefef">
-  <table class="em_full_wrap" valign="top" width="100%" cellspacing="0" cellpadding="0" border="0" bgcolor="#efefef" align="center">
+<body class="em_body" style="margin:0px; padding:0px;" bgcolor="#ffffff">
+  <table class="em_full_wrap" valign="top" width="100%" cellspacing="0" cellpadding="0" border="0" bgcolor="#ffffff" align="center">
     <tbody><tr>
       <td valign="top" align="center"><table class="em_main_table" style="width:700px;" width="700" cellspacing="0" cellpadding="0" border="0" align="center">
         <!--Header section-->
         <tbody>
           <tr>
-            <td style="padding:15px;" class="em_padd" valign="top" bgcolor="#f6f7f8" align="center">
+            <td style="padding:15px;" class="em_padd" valign="top" bgcolor="#ffffff" align="center">
               <table width="100%" cellspacing="0" cellpadding="0" border="0" align="center">
                 <tbody>
                   <tr>
@@ -214,11 +199,11 @@
         <!--//Banner section-->
         <!--Content Text Section-->
         <tr>
-          <td style="padding:35px 70px 30px;" class="em_padd" valign="top" bgcolor="#0d1121" align="center">
+          <td style="padding:35px 70px 30px;" class="em_padd" valign="top" bgcolor="#ffffff" align="center">
             <table width="100%" cellspacing="0" cellpadding="0" border="0" align="center">
               <tbody>
                 <tr>
-                  <td style="font-family:'Helvetica Neue'; font-weight: 100; font-size:20px; line-height:30px; color:#ffffff;" valign="top" align="center">Professional quality photography helps attract new golfers to your course,creating return customers and building new revenue streams.</td>
+                  <td style="font-family:'Helvetica Neue'; font-weight: 100; font-size:20px; line-height:30px; color:#000000;" valign="top" align="center">Professional quality photography helps attract new golfers to your course,creating return customers and building new revenue streams.</td>
                 </tr>
                 <tr>
                   <td style="font-size:0px; line-height:0px; height:15px;" height="15">&nbsp;</td>
@@ -228,7 +213,7 @@
                   <td>
                     <div class="container">
                       <div class="containerLeft">
-                        <p style="font-family:'Helvetica Neue'; font-size:18px; line-height:28px; color:#ffffff; letter-spacing:2px; padding-bottom:16px;" valign="center" align="center">&nbsp;97% of golfers are going online&nbsp;<br/>&nbsp;to look at photos before they&nbsp;<br/>&nbsp;book a round...&nbsp;</p>
+                        <p style="font-family:'Helvetica Neue'; font-size:18px; line-height:28px; color:#000000; letter-spacing:2px; padding-bottom:16px;" valign="top" align="center">&nbsp;97% of golfers are going online&nbsp;<br/>&nbsp;to look at photos before they&nbsp;<br/>&nbsp;book a round...&nbsp;</p>
                       </div>
                       <div class="containerRight">
                         <img class="em_img" alt="Michael Dennis Photography" style="display:block; font-family:Arial, sans-serif; font-size:30px; line-height:34px; color:#000000; max-width:175px;" src="https://ianconraddennis.github.io/html/1.jpg" width="175" border="0" height="154">
@@ -248,11 +233,10 @@
                   <td>
                     <div class="container">
                       <div class="containerLeft">
-
-                          <p style="font-family:'Helvetica Neue'; font-size:18px; line-height:28px; color:#ffffff; letter-spacing:2px; padding-bottom:16px;" valign="center" align="center">&nbsp;...And 62% of golfers say that&nbsp;<br/>&nbsp;quality photography weighson&nbsp;<br/>&nbsp;their decision to play a course.&nbsp;</p>
+                        <p style="font-family:'Helvetica Neue'; font-size:18px; line-height:28px; color:#000000; letter-spacing:2px; padding-bottom:16px;" valign="top" align="center">&nbsp;...And 62% of golfers say that&nbsp;<br/>&nbsp;quality photography weighson&nbsp;<br/>&nbsp;their decision to play a course.&nbsp;</p>
                       </div>
                       <div class="containerRight">
-                        <img href="https://ianconraddennis.github.io/html/2.jpg" class="em_img" alt="Michael Dennis Photography" style="display:block; font-family:Arial, sans-serif; font-size:30px; line-height:34px; color:#000000; max-width:252px;" src="https://ianconraddennis.github.io/html/2.jpg" width="252" border="0" height="154">
+                        <img class="em_img" alt="Michael Dennis Photography" style="display:block; font-family:Arial, sans-serif; font-size:30px; line-height:34px; color:#000000; max-width:252px;" src="https://ianconraddennis.github.io/html/2.jpg" width="252" border="0" height="154">
                       </div>
                     </div>
                   </td>
@@ -265,44 +249,26 @@
                   <td class="em_h20" style="font-size:0px; line-height:0px; height:25px;" height="50">&nbsp;</td>
                   <!--—this is space of 25px to separate two paragraphs ---->
                 </tr>
-                <tr valign="middle">
-                  <td>
-                    <div class="container">
-                      <div class="containerLeftNb">
-                        <p style="font-family:'Helvetica Neue'; font-size:18px; line-height:28px; color:#ffffff; letter-spacing:2px; padding-bottom:16px;" valign="center" align="center">&nbsp;Curent online photo:&nbsp;</p>
-                        <img class="em_img" alt="Michael Dennis Photography" style="display:block; font-family:Arial, sans-serif; font-size:30px; line-height:34px; color:#000000; max-width:252px;" src="https://ianconraddennis.github.io/html/nal.jpg" width="252" border="0" height="154">
-                        <p style="font-family:'Helvetica Neue'; font-size:18px; line-height:28px; color:#ffffff; letter-spacing:2px; padding-bottom:16px;" valign="center" align="center"><br/>&nbsp;Professionaly shot:&nbsp;</p>
-                        <img class="em_img" alt="Michael Dennis Photography" style="display:block; font-family:Arial, sans-serif; font-size:30px; line-height:34px; color:#000000; max-width:252px;" src="https://ianconraddennis.github.io/html/NAL16.jpg" width="252" border="0" height="154">
-                      </div>
-                      <div class="containerRightWb"><br/><br/>
-                      <p style="font-family:'Helvetica Neue'; font-size:24px; line-height:28px; color:#ffffff; letter-spacing:2px; padding-bottom:16px;" valign="center" align="center"><br/><br/><br/><br/><br/>&nbsp;You don't need to be&nbsp;<br/>&nbsp;a top 100 course&nbsp;<br/>&nbsp;to have world-class&nbsp;<br/>&nbsp;photography.&nbsp;</p>
-                      </div>
-                    </div>
-                  </td>
-                </tr>
                 <tr>
-                  <td class="em_h20" style="font-size:0px; line-height:0px; height:425px;" height="425">&nbsp;</td>
-                  <!--—this is space of 25px to separate two paragraphs ---->
-                </tr>
-                <tr>
-                  <td style="font-family:'Helvetica Neue'; font-size:18px; line-height:22px; color:#ffffff; text-transform:uppercase; letter-spacing:2px; padding-bottom:12px;" valign="top" align="center">Michael Dennis Photography</td>
+                  <td style="font-family:'Open Sans', Arial, sans-serif; font-size:18px; line-height:22px; color:#fbeb59; text-transform:uppercase; letter-spacing:2px; padding-bottom:12px;" valign="top" align="center"> This is paragraph 3 of font size 18px and #fbeb59 font color with a line spacing of 25px and Uppercase</td>
                 </tr>
               </tbody>
             </table>
           </td>
         </tr>
+
         <!--//Content Text Section-->
         <!--Footer Section-->
         <tr>
-          <td style="padding:38px 30px;" class="em_padd" valign="top" bgcolor="#f6f7f8" align="center"><table width="100%" cellspacing="0" cellpadding="0" border="0" align="center">
+          <td style="padding:38px 30px;" class="em_padd" valign="top" bgcolor="#ffffff" align="center"><table width="100%" cellspacing="0" cellpadding="0" border="0" align="center">
             <tbody><tr>
               <td style="padding-bottom:16px;" valign="top" align="center"><table cellspacing="0" cellpadding="0" border="0" align="center">
                 <tbody><tr>
-                  <td valign="top" align="center"><a href="#" target="_blank" style="text-decoration:none;"><img src="images/fb.png" alt="fb" style="display:block; font-family:Arial, sans-serif; font-size:14px; line-height:14px; color:#ffffff; max-width:26px;" width="26" border="0" height="26"></a></td>
+                  <td valign="top" align="center"><a href="#" target="_blank" style="text-decoration:none;"><img src="images/fb.png" alt="fb" style="display:block; font-family:Arial, sans-serif; font-size:14px; line-height:14px; color:#000000; max-width:26px;" width="26" border="0" height="26"></a></td>
                   <td style="width:6px;" width="6">&nbsp;</td>
-                  <td valign="top" align="center"><a href="#" target="_blank" style="text-decoration:none;"><img src="images/tw.png" alt="tw" style="display:block; font-family:Arial, sans-serif; font-size:14px; line-height:14px; color:#ffffff; max-width:27px;" width="27" border="0" height="26"></a></td>
+                  <td valign="top" align="center"><a href="#" target="_blank" style="text-decoration:none;"><img src="images/tw.png" alt="tw" style="display:block; font-family:Arial, sans-serif; font-size:14px; line-height:14px; color:#000000; max-width:27px;" width="27" border="0" height="26"></a></td>
                   <td style="width:6px;" width="6">&nbsp;</td>
-                  <td valign="top" align="center"><a href="#" target="_blank" style="text-decoration:none;"><img src="images/yt.png" alt="yt" style="display:block; font-family:Arial, sans-serif; font-size:14px; line-height:14px; color:#ffffff; max-width:26px;" width="26" border="0" height="26"></a></td>
+                  <td valign="top" align="center"><a href="#" target="_blank" style="text-decoration:none;"><img src="images/yt.png" alt="yt" style="display:block; font-family:Arial, sans-serif; font-size:14px; line-height:14px; color:#000000; max-width:26px;" width="26" border="0" height="26"></a></td>
                 </tr>
               </tbody></table></td>
             </tr>
