--- a/html/MichaelDennisPhotography.html
+++ b/html/MichaelDennisPhotography.html
@@ -298,7 +298,7 @@
             <tbody><tr>
               <td style="padding-bottom:16px;" valign="top" align="center"><table cellspacing="0" cellpadding="0" border="0" align="center">
                 <tbody><tr>
-                  <td valign="top" align="center"><a href="#" target="_blank" style="text-decoration:none;"><img src="images/fb.png" alt="fb" style="display:block; font-family:Arial, sans-serif; font-size:14px; line-height:14px; color:#ffffff; max-width:26px;" width="26" border="0" height="26"></a></td>
+                  <td valign="top" align="center"><a href="#" target="_blank" style="text-decoration:none;"><img src="https://ianconraddennis.github.io/html/app-icon2.png" alt="fb" style="display:block; font-family:Arial, sans-serif; font-size:14px; line-height:14px; color:#ffffff; max-width:26px;" width="26" border="0" height="26"></a></td>
                   <td style="width:6px;" width="6">&nbsp;</td>
                   <td valign="top" align="center"><a href="#" target="_blank" style="text-decoration:none;"><img src="images/tw.png" alt="tw" style="display:block; font-family:Arial, sans-serif; font-size:14px; line-height:14px; color:#ffffff; max-width:27px;" width="27" border="0" height="26"></a></td>
                   <td style="width:6px;" width="6">&nbsp;</td>
@@ -308,7 +308,7 @@
             </tr>
             <tr>
               <td style="font-family:'Open Sans', Arial, sans-serif; font-size:11px; line-height:18px; color:#999999;" valign="top" align="center"><a href="#" target="_blank" style="color:#999999; text-decoration:underline;">PRIVACY STATEMENT</a> | <a href="#" target="_blank" style="color:#999999; text-decoration:underline;">TERMS OF SERVICE</a> | <a href="#" target="_blank" style="color:#999999; text-decoration:underline;">RETURNS</a><br>
-                © 2017 Companyname. All Rights Reserved.<br>
+                © 2019 michaeldennisphotography. All Rights Reserved.<br>
                 If you do not wish to receive any further emails from us, please <a href="#" target="_blank" style="text-decoration:none; color:#999999;">unsubscribe</a></td>
               </tr>
             </tbody></table></td>
