--- a/html/MichaelDennisPhotography.html
+++ b/html/MichaelDennisPhotography.html
@@ -186,7 +186,7 @@
               <table width="100%" cellspacing="0" cellpadding="0" border="0" align="center">
                 <tbody>
                   <tr>
-                    <td style="font-family:'Open Sans', Arial, sans-serif; font-size:12px; line-height:15px; color:#0d1121;" valign="top" align="center">Michael Dennis Photography | <a href="https://michaeldennisphotography.zenfolio.com/" target="_blank" style="color:#0d1121; text-decoration:underline;">View Online</a></td>
+                    <td style="font-family:'Open Sans', Arial, sans-serif; font-size:12px; line-height:15px; color:#0d1121;" valign="top" align="center">Michael Dennis Photography | <a href="https://michaeldennisphotography.zenfolio.com/" target="_blank" style="color:#0d1121; text-decoration:underline;">View Website</a></td>
                   </tr>
                 </tbody>
               </table>
