--- a/html/FrameMichaelDennisPhotography.html
+++ b/html/FrameMichaelDennisPhotography.html
@@ -7,6 +7,6 @@
     <title></title>
 </head>
 <body>
-  <iframe src="https://ianconraddennis.github.io/html/MichaelDennisPhotography.html" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+  <iframe src="https://ianconraddennis.github.io/html/MichaelDennisPhotography.html" style="border-width:0" width="800" height="1600" frameborder="0" scrolling="yes"></iframe>
 </body>
 </html>
