--- a/html/MichaelDennisPhotography.html
+++ b/html/MichaelDennisPhotography.html
@@ -174,19 +174,18 @@
 }
 </style>
 </head>
-
-<body class="em_body" style="margin:0px; padding:0px;" bgcolor="#efefef">
+<body class="em_body" style="margin:0px; white-space: nowrap; padding:0px;" bgcolor="#efefef">
   <table class="em_full_wrap" valign="top" width="100%" cellspacing="0" cellpadding="0" border="0" bgcolor="#efefef" align="center">
     <tbody><tr>
       <td valign="top" align="center"><table class="em_main_table" style="width:700px;" width="700" cellspacing="0" cellpadding="0" border="0" align="center">
         <!--Header section-->
         <tbody>
           <tr>
-            <td style="padding:15px;" class="em_padd" valign="top" bgcolor="#f6f7f8" align="center">
+            <td style="padding:15px;"class="em_padd" valign="top" bgcolor="#000000" align="center">
               <table width="100%" cellspacing="0" cellpadding="0" border="0" align="center">
                 <tbody>
                   <tr>
-                    <td style="font-family:'Open Sans', Arial, sans-serif; font-size:12px; line-height:15px; color:#0d1121;" valign="top" align="center">Michael Dennis Photography | <a href="https://michaeldennisphotography.zenfolio.com/" target="_blank" style="color:#0d1121; text-decoration:underline;">View Website</a></td>
+                    <td style="font-family:'Helvetica Neue';  font-size:12px; line-height:15px; color:#ffffff;" valign="top" align="center">Michael Dennis Photography | <a href="https://michaeldennisphotography.zenfolio.com/" target="_blank" style="color:#ffffff; text-decoration:underline;">View Website</a></td>
                   </tr>
                 </tbody>
               </table>
@@ -198,12 +197,11 @@
             <td valign="top" align="center">
               <table width="100%" cellspacing="0" cellpadding="0" border="0" align="center">
                 <tbody><tr>
-
                   <td valign="top" align="center">
                     <div class="container">
-                      <img class="em_img" alt="Michael Dennis Photography" style="display:block; font-family:Arial, sans-serif; font-size:30px; line-height:34px; color:#000000; max-width:700px;" src="https://ianconraddennis.github.io/html/AD15full.jpg" width="700" border="0" height="345">
-                      <div class="centeredHeader">GET NOTICED.</div>
-                      <div class="centeredh2">Get better imagery.</div>
+                      <img class="em_img" alt="Michael Dennis Photography" style="display:block; font-family:Arial, sans-serif; font-size:30px; line-height:34px; color:#000000; max-width:700px;" src="https://ianconraddennis.github.io/html/AD15full.jpg" width="700" border="0" height="233">
+                      <div class="centeredHeader" style="text-shadow: 4px 4px #000000;">GET NOTICED.</div>
+                      <div class="centeredh2" style="text-shadow: 4px 4px #000000;"><br/>Get better imagery.</div>
                     </div>
                   </td>
                 </tr>
@@ -218,7 +216,7 @@
             <table width="100%" cellspacing="0" cellpadding="0" border="0" align="center">
               <tbody>
                 <tr>
-                  <td style="font-family:'Helvetica Neue'; font-weight: 100; font-size:20px; line-height:30px; color:#ffffff;" valign="top" align="center">Professional quality photography helps attract new golfers to your course,creating return customers and building new revenue streams.</td>
+                  <td style="font-family:'Helvetica Neue'; font-weight: 100; font-size:20px; line-height:30px; color:#ffffff;" valign="top" align="center">&nbsp;Professional quality photography helps attract new golfers to your&nbsp;<br/>&nbsp;course,creating return customers and building new revenue streams.&nbsp;</td>
                 </tr>
                 <tr>
                   <td style="font-size:0px; line-height:0px; height:15px;" height="15">&nbsp;</td>
@@ -307,8 +305,7 @@
               </tbody></table></td>
             </tr>
             <tr>
-              <td style="font-family:'Open Sans', Arial, sans-serif; font-size:11px; line-height:18px; color:#999999;" valign="top" align="center">© 2019 michaeldennisphotography. All Rights Reserved.<br>
-                If you do not wish to receive any further emails from us, please <a href="#" target="_blank" style="text-decoration:none; color:#999999;">unsubscribe</a></td>
+              <td style="font-family:'Open Sans', Arial, sans-serif; font-size:11px; line-height:18px; color:#999999;" valign="top" align="center">© 2019 michaeldennisphotography. All Rights Reserved.</td>
               </tr>
             </tbody></table></td>
           </tr>
